--- a/styles/graphStyle.css
+++ b/styles/graphStyle.css
@@ -1,8 +1,28 @@
+button
+{
+  width: 10vw;
+  height: 20px;
+  padding: 10px;
+  padding-bottom: 20px;
+  margin: 10px;
+}
+
 .backButton
 {
   position: absolute;
   left: 10px;
   top: 10px;
+}
+
+.backButton:hover
+{
+  opacity: .5;
+}
+
+#home
+{
+  width: 20px;
+  height: 20px;
 }
 
 #variables
@@ -45,18 +65,4 @@
 #mainbar.darkmode
 {
   background-color: rgba(255,255,255,.2);
-}
-
-.nextPage
-{
-  position: absolute;
-  right: 10px;
-  bottom: 10px;
-}
-
-.backPage
-{
-  position: absolute;
-  left: 31vw;
-  bottom: 10px;
 }
