--- a/styles/mainStyle.css
+++ b/styles/mainStyle.css
@@ -1,6 +1,12 @@
 body
 {
   text-align: center;
+  font-family: 'Montserrat', sans-serif;
+}
+
+button
+{
+  font-family: 'Montserrat', sans-serif;
 }
 
 #tooltip
@@ -73,4 +79,22 @@ body
   position: absolute;
   right: 10px;
   top: 10px;
+  border: none;
+  background: none;
+  width: 30px;
+  height: 25px;
+  padding: 0px;
+  margin: 0px;
+}
+
+.modeToggle:hover
+{
+  opacity: .5;
+  cursor: pointer;
+}
+
+#lightdark
+{
+  width: 20px;
+  height: 20px;
 }
