polished the entire website
also added totalCount to the third button and cleaned up the site in general

--- a/styles/graphStyle.css
+++ b/styles/graphStyle.css
@@ -66,3 +66,10 @@ button
 {
   background-color: rgba(255,255,255,.2);
 }
+
+#currentFile
+{
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+}
